--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66265239-3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'UA-66265239-3');
+        </script>
         <meta charset="utf-8">
         <title>Ashwin's Webpage</title>
         <link rel="shortcut icon" href="https://lh3.googleusercontent.com/VGij4GtbIB7iDr6nNMIVMoHtYRgjDdIakuKXH14OYYtmVeJbYCvhPFsV3QMZLioYlixSEUHN__pHJ8YGme67fTD_P7kjmOmLJegfGUnJ2NPqGfz5YGpSJipiXjnnu6AgncBEWkayhO8Gqw1b0oAOzKhV_xqRe8eg3hLgHgKJ6GqoEWyBJEG2T_6E0S9NujIVW7sN5uojms-3sIYC2nnFBwU5IV1sG0oOi2tNb5vdEKWeNBoWStEwBYrB9LMOuTtkEWvKnzvOLe3bqD9Kah-0SQm20XvMDeML8pZr1MTZBhxZqW9SKnaEzy2j7MtGkmFSGJI0QuYSQSuXDW_zhTjd20oAzdI9mp2tlEEWZR9DXGlYUDIBie7JF42Awn4MIuOPpiQ5aGFbBPodb6qZpXyjztygFsUW4Lv19U2XV0jyn-9HEEZNKH_t-zRNyxqYixuYJiYYXVj-loJXc8LAuesdEBUrFgu05yUCK9h7nKsKJ4UZwcZYxL3p9FN8T4voJAsNqQI44F_BtdU1BJr9NaOeWYK_qRew8Ei42ZLuWgZzkSTChsM7HFSW5_SSwYnCCN-VOqAsiQteWLxudcyMFjDK31-1TR2h_zDUMzHEkwcPv7GBdmyJ_IMZ0oee1cNgugs=s16-no" type="image/x-icon">
