--- a/OneLocker/index.html
+++ b/OneLocker/index.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@master/OneLocker.css">
 </head>
 <body id="body">
-<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@dbc020d/OneLocker.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@a700ee4/OneLocker.js"></script>
 <p>Don't have an account, yet? <a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank" class="link">Sign-up today!</a></p>
 <p style="margin-top: -15px">Questions? Raise your hand and ask <a href="mailto:shwin320@gmail.com" target="_blank" class="link">Ashwin Thomas</a>, OneLocker developer.</p>
 <br><br>
 <h1>OneLocker</h1>
-<h2>Your world, digitalized</h2>
+<h2>Your life, organized</h2>
 <img src="https://images-na.ssl-images-amazon.com/images/I/51ry%2BQ3N9VL._SY355_.jpg" id="nonhover">
 <br><br><br>
 <div style="text-align:center;">
