--- a/OneLocker.html
+++ b/OneLocker.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>OneLocker</title>
-<link rel="shortcut icon" href="https://lh4.googleusercontent.com/WGc0I0iz5xeLBi6TpDQ1JwLMlxK13bDNlFqjmBtrw9oTgp1wWswUUuc2Zdbo0qZWjqXdXW-sedupQ6rBSbTkr_oyer5qOkPY7697fWgCUmYBmp7hhTlh8C6DYQJEswPbuEia6y2r3JXminWgUeYGWjTdBuezhN0JTPYkS7nDEvfsQCFIr0GAjV0QF4Lpb0mRpOGCQ9Ph1hJwwhAhZune_Hmi5zfnIAr99paHtiERWqaljtcfYuAahU1Ui8yXAPa5uRauHHflaSOwBUb_oG0icgdKXNbD-eoULkFD644UMSQ4Ez-mzE7x05ICBr8PZBAsiKVFRHZW8c_YTaWmMKp6TR-iZnW99NFhvTdFVHylWESXJYgMPIED7VLRIK0vT3TcTuLaBS_g-kW9dAhjgdIXRXCVfR-6c0wJZw_bj-e6QPaIYgStn4xcv9eEUADnzHdPTe8ESMTHRfKcb6KjEJaUlTdykwZXUV7RaF93w14LqW1wXlgrxZtXLeAvrIRwpvwKPuxOiKsGjSVVfn6RqgiD7W_1hNZIAT1DkS0k2aWRs7uPs25UGbn9XdR6AmpoMGVs7511bcLbqzw4PiDMizj3E1a6qYL8_adb2PhtuEclOw=s16-no" type="image/x-icon">
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@15b776a/OneLocker.css">
 </head>
 <body id="body">
