--- a/OneLocker.html
+++ b/OneLocker.html
@@ -11,7 +11,7 @@
 <br><br>
 <h1>OneLocker</h1>
 <h2>Your life, organized</h2>
-<img src="https://images-na.ssl-images-amazon.com/images/I/51ry%2BQ3N9VL._SY355_.jpg" id="nonhover">
+<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker/OneLocker.png" id="nonhover">
 <br><br><br>
 <div style="text-align:center;">
 <form action="javascript:;" onsubmit="login_protocol()">
