--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ashwin's Website</title>
+	<title>Ashwin's Website - Home</title>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-66265239-3"></script>
 	<script>
@@ -29,10 +29,10 @@
 	</span>
 	</table>
 	<ul id="navigation">
-		<li id="active"><a href="home.html">Home</a></li>
-		<li id=><a href="about.html">About Me</a></li>
-		<li id=><a href="achievements.html">Achievements</a></li>
-		<li id=><a href="work.html">My Work</a></li>
+		<li id="active"><a href="/">Home</a></li>
+		<li id=><a href="/about.html">About Me</a></li>
+		<li id=><a href="/achievements.html">Achievements</a></li>
+		<li id=><a href="/work.html">My Work</a></li>
 	</ul>
 </div>
 <h1 id="top">Welcome to Ashwin's Website</h1>
