--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
 	</table>
 	<ul id="navigation">
 		<li id="active"><a href="/">Home</a></li>
-		<li id=><a href="/about.html">About Me</a></li>
-		<li id=><a href="/achievements.html">Achievements</a></li>
-		<li id=><a href="/work.html">My Work</a></li>
+		<li id=><a href="/about">About Me</a></li>
+		<li id=><a href="/achievements">Achievements</a></li>
+		<li id=><a href="/work">My Work</a></li>
 	</ul>
 </div>
 <h1 id="top">Welcome to Ashwin's Website</h1>
 <q>I have no special talent. I am only passionately curious.</q>
 <p style="text-align: center; text-indent: 30%;">— Albert Einstein</p>
-<script async src="https://cse.google.com/cse.js?cx=014767419889653321842:8xjzac8wvqg"></script>
-<div class="gcse-search"></div>
 <iframe src="https://freesecure.timeanddate.com/clock/i6wzpdj1/n198/fs24/tt0/tw1/td2/tb4" frameborder="0" width="282" height="58" style="display: block; margin: 0 auto;" id="bottom"></iframe>
 <footer>
 <a href="https://shwin320.github.io"><p style="padding-left: 8px;">Ashwin's Website</p></a>
