--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		gtag('config', 'UA-66265239-3');
 	</script>
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin's%20Website.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@4fb532c/Ashwin's%20Website.css">
 	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/favicon.ico" type="image/x-icon">
 </head>
 <body>
