--- a/achievements.html
+++ b/achievements.html
@@ -103,12 +103,12 @@
 	</table>
 	<h3>Achievements Recognized By</h3>
 	<div id="logo">
-		<a href="http://www.pjas.net/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/PJAS_Logo_2018.jpg/253px-PJAS_Logo_2018.jpg" height=120 width=120></a>
+		<a href="http://www.pjas.net/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/PJAS_Logo_2018.jpg/253px-PJAS_Logo_2018.jpg" height=120 width=120 style="margin-bottom: 5px;"></a>
 		<a href="https://www.piaa.org/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/PIAA_newlogo.png/150px-PIAA_newlogo.png" style="padding-top: 18px;"></a>
 		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.ymaws.com/www.aatg.org/graphics/logo.png" width=144.6 height=72 style="padding-top: 25px;"></a>
 		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/e/ed/Peap.jpg"></a>
 		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://www.lmtsd.org/cms/lib/PA01000427/Centricity/Domain/26/Logo_PAPTA.jpg"  style="padding-top: 14px;"></a>
-		<a href="https://www.paseed.org/" target="_blank" id="bottom"><img src="https://static.wixstatic.com/media/5ae0e5_fb35d6c00f3f469e91e4b6afa4d9a5b5~mv2.png/v1/fill/w_168,h_174,al_c,q_85,usm_0.66_1.00_0.01/5ae0e5_fb35d6c00f3f469e91e4b6afa4d9a5b5~mv2.webp"  style="padding-top: 14px;"></a>
+		<a href="https://www.paseed.org/" target="_blank" id="bottom"><img src="https://static.wixstatic.com/media/5ae0e5_fb35d6c00f3f469e91e4b6afa4d9a5b5~mv2.png/v1/fill/w_168,h_174,al_c,q_85,usm_0.66_1.00_0.01/5ae0e5_fb35d6c00f3f469e91e4b6afa4d9a5b5~mv2.webp"  style="padding-top: 14px;" height=120></a>
 	</div>
 <footer>
 <a href="https://shwin320.github.io"><p style="padding-left: 8px;">Ashwin's Website</p></a>
