--- a/achievements.html
+++ b/achievements.html
@@ -11,7 +11,7 @@
 
 		gtag('config', 'UA-66265239-3');
 	</script>
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin's%20Website.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@4fb532c/Ashwin's%20Website.css">
 	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -77,7 +77,7 @@
 			<tr>
 				<td>National German Exam - Gold Award</td>
 				<td class="center">German</td>
-				<td>May 2019</td>
+				<td>April 2019</td>
 			</tr>
 			<tr>
 				<td>PJAS State - 2nd Place</td>
@@ -99,6 +99,26 @@
 				<td class="center">Sports</td>
 				<td>Fall 2019</td>
 			</tr>
+			<tr>
+				<td>PA SEED Environmental Literacy Hackathon</td>
+				<td class="center">Computer Science</td>
+				<td>January 2020</td>
+			</tr>
+			<tr>
+				<td>National German Exam - Silver Award</td>
+				<td class="center">German</td>
+				<td>January 2020</td>
+			</tr>
+			<tr>
+				<td>PJAS Regional - 3rd Place</td>
+				<td class="center">Science</td>
+				<td>February 2020</td>
+			</tr>
+			<tr>
+				<td>Honor Roll</td>
+				<td class="center">Academics and Achievement</td>
+				<td>1st Semester 2019-2020</td>
+			</tr>
 		</tbody>
 	</table>
 	<h3>Achievements Recognized By</h3>
@@ -115,7 +135,7 @@
 <p style="margin-left: 10px; margin-right: 10px;">—</p>
 <a href="mailto:shwin320@gmail.com"><p>Email Ashwin</p></a>
 <p style="margin-left: 10px; margin-right: 10px;">—</p>
-<p>Copyright © 2019 Ashwin Thomas. All Rights Reserved.</p>
+<p>Copyright © 2019-2020 Ashwin Thomas. All Rights Reserved.</p>
 <button onclick="scrollup()" id="scroll" title="Go to top"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" width=40 height=40></button>
 </footer>
 <script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin's%20Website.js"></script>
