--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 <p style="margin-left: 10px; margin-right: 10px;">—</p>
 <a href="mailto:shwin320@gmail.com"><p>Email Ashwin</p></a>
 <p style="margin-left: 10px; margin-right: 10px;">—</p>
-<p>Copyright © 2019 Ashwin Thomas. All Rights Reserved.</p>
+<p>Copyright © 2019-2020 Ashwin Thomas. All Rights Reserved.</p>
 <button onclick="scrollup()" id="scroll" title="Go to top"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" width=40 height=40></button>
 </footer>
 <script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin's%20Website.js"></script>
