--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
 		<td><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSyvWiI7I7F2CCWHuITaSTYPFVPCbHYoYhdCVzVzxsYHQNGhdc7GWdlAaXj-uAuUkry2ugIqDx34-7l/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></td>
 	</tr>
 	<tr>
-		<td>PA SEED Environmental Literacy Hackathon Mock App - LCC</td>
+		<td><h3>PA SEED Environmental Literacy Hackathon Mock App - LCC</h3></td>
 		<td><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRUxrW1JAjmBGqqnaOJFjHFPnv10MVMaEuC-PvrJA3vfKjClD5dvYr3z_ZhWPdCSZTcSaATbT-S56lg/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" height="400" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></td>
 	</tr>
 </table>
