--- a/index.html
+++ b/index.html
@@ -11,45 +11,72 @@
 
 		gtag('config', 'UA-66265239-3');
 	</script>
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@4fb532c/Ashwin's%20Website.css">
-	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@2b80595/Ashwin's Website.css">
+	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<style>
+	#home{
+		width: 48.422px;
+		right: 292.93px;
+	}
+	#about{
+		width: 0px;
+		right: 207.3px;
+	}
+	#achieve{
+		width: 0px;
+		right: 85.88px;
+	}
+	#work{
+		width: 0px;
+		right: 8px;
+	}
+	</style>
 </head>
 <body>
 <div id="head">
 	<table id="heading">
 		<tr>
-			<td >
-				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin%20Thomas.jpg" width="115" height="153" onMouseDown="copyright()">
+			<td>
+				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png">
 			</td>
 			<td>
-				<h1 class="headtext">Ashwin Thomas</h1>
-				<h2 class="headtext">Student, Lower Moreland High School</h2>
+				<h1 id="headtext">Ashwin Thomas</h1>
 			</td>
 		</tr>
-	</span>
 	</table>
 	<ul id="navigation">
-		<li id="active"><a href="/">Home</a></li>
-		<li id=><a href="/about">About Me</a></li>
-		<li id=><a href="/achievements">Achievements</a></li>
-		<li id=><a href="/work">My Work</a></li>
+		<li><a href="home.html" id="nhome">Home</a></li>
+		<li><a href="about.html" id="nabout" class="inact">About Me</a></li>
+		<li><a href="achievements.html" id="nachieve" class="inact">Achievements</a></li>
+		<li><a href="work.html" id="nwork" class="inact">My Work</a></li>
 	</ul>
+	<div class="under" id="home"></div>
+	<div class="under" id="about"></div>
+	<div class="under" id="achieve"></div>
+	<div class="under" id="work"></div>
 </div>
 <h1 id="top">Welcome to Ashwin's Website</h1>
+<br><br>
 <q>I have no special talent. I am only passionately curious.</q>
 <p style="text-align: center; text-indent: 30%;">— Albert Einstein</p>
-<br>
-<br>
-<br>
-<iframe src="https://freesecure.timeanddate.com/clock/i6wzpdj1/n198/fs24/tt0/tw1/td2/tb4" frameborder="0" width="282" height="58" style="display: block; margin: 0 auto;" id="bottom"></iframe>
 <footer>
-<a href="https://shwin320.github.io"><p style="padding-left: 8px;">Ashwin's Website</p></a>
-<p style="margin-left: 10px; margin-right: 10px;">—</p>
-<a href="mailto:shwin320@gmail.com"><p>Email Ashwin</p></a>
-<p style="margin-left: 10px; margin-right: 10px;">—</p>
-<p>Copyright © 2019-2020 Ashwin Thomas. All Rights Reserved.</p>
-<button onclick="scrollup()" id="scroll" title="Go to top"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" width=40 height=40></button>
+<a href="https://shwin320.github.io" title="Home"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Home.svg" alt="Home" id="hbutton" height=24 style="margin-left:2px; padding-right: 8px;"></a>
+<a href="mailto:shwin320@gmail.com" title="Email Ashwin"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Email.svg" alt="Email Ashwin" id="ebutton" height=24></a>
+<p>Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 </footer>
-<script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin's%20Website.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@2b80595/Ashwin's Website.js"></script>
+<script>
+/*
+navh.addEventListener("mouseover", underhome);
+navh.addEventListener("mouseout", nunderhome);
+*/
+nava.addEventListener("mouseout", nunderabout);
+nava.addEventListener("mouseover", underabout);
+navach.addEventListener("mouseover", underachieve);
+navach.addEventListener("mouseout", nunderachieve);
+navw.addEventListener("mouseover", underwork);
+navw.addEventListener("mouseout", nunderwork);
+</script>
 </body>
 </html>
