--- a/achievements.html
+++ b/achievements.html
@@ -11,29 +11,50 @@
 
 		gtag('config', 'UA-66265239-3');
 	</script>
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@4fb532c/Ashwin's%20Website.css">
-	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@2b80595/Ashwin's Website.css">
+	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/favicon.ico" type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<style>
+	#home{
+		width: 0px;
+		right: 292.93px;
+	}
+	#about{
+		width: 0px;
+		right: 207.3px;
+	}
+	#achieve{
+		width: 113.422px;
+		right: 85.88px;
+	}
+	#work{
+		width: 0px;
+		right: 8px;
+	}
+	</style>
 </head>
 <body>
 <div id="head">
 	<table id="heading">
 		<tr>
-			<td>
-				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin%20Thomas.jpg" width="115" height="153" onMouseDown="copyright()">
+			<td >
+				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png" height="75">
 			</td>
 			<td>
-				<h1 class="headtext">Ashwin Thomas</h1>
-				<h2 class="headtext">Student, Lower Moreland High School</h2>
+				<h1 id="headtext">Ashwin Thomas</h1>
 			</td>
 		</tr>
-	</span>
 	</table>
 	<ul id="navigation">
-		<li id=><a href="/">Home</a></li>
-		<li id=><a href="/about">About Me</a></li>
-		<li id="active"><a href="/achievements">Achievements</a></li>
-		<li id=><a href="/work">My Work</a></li>
+		<li><a href="home.html" id="nhome" class="inact">Home</a></li>
+		<li><a href="about.html" id="nabout" class="inact">About Me</a></li>
+		<li><a href="achievements.html" id="nachieve">Achievements</a></li>
+		<li><a href="work.html" id="nwork" class="inact">My Work</a></li>
 	</ul>
+	<div class="under" id="home"></div>
+	<div class="under" id="about"></div>
+	<div class="under" id="achieve"></div>
+	<div class="under" id="work"></div>
 </div>
 	<table id="top" style="width: 100%">
 		<thead class="bottom">
@@ -77,7 +98,7 @@
 			<tr>
 				<td>National German Exam - Gold Award</td>
 				<td class="center">German</td>
-				<td>April 2019</td>
+				<td>May 2019</td>
 			</tr>
 			<tr>
 				<td>PJAS State - 2nd Place</td>
@@ -100,7 +121,7 @@
 				<td>Fall 2019</td>
 			</tr>
 			<tr>
-				<td>PA SEED Environmental Literacy Hackathon</td>
+				<td>PA SEED Environmental Literacy Hackathon - 2nd Place</td>
 				<td class="center">Computer Science</td>
 				<td>January 2020</td>
 			</tr>
@@ -123,22 +144,33 @@
 	</table>
 	<h3>Achievements Recognized By</h3>
 	<div id="logo">
-		<a href="http://www.pjas.net/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/PJAS_Logo_2018.jpg/253px-PJAS_Logo_2018.jpg" height=120 width=120 style="margin-bottom: 5px;"></a>
-		<a href="https://www.piaa.org/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/PIAA_newlogo.png/150px-PIAA_newlogo.png" style="padding-top: 18px;"></a>
-		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.ymaws.com/www.aatg.org/graphics/logo.png" width=144.6 height=72 style="padding-top: 25px;"></a>
-		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/en/e/ed/Peap.jpg"></a>
-		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://www.lmtsd.org/cms/lib/PA01000427/Centricity/Domain/26/Logo_PAPTA.jpg"  style="padding-top: 14px;"></a>
-		<a href="https://www.paseed.org/" target="_blank" id="bottom"><img src="https://static.wixstatic.com/media/5ae0e5_fb35d6c00f3f469e91e4b6afa4d9a5b5~mv2.png/v1/fill/w_168,h_174,al_c,q_85,usm_0.66_1.00_0.01/5ae0e5_fb35d6c00f3f469e91e4b6afa4d9a5b5~mv2.webp"  height=120></a>
+		<a href="http://www.pjas.net/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PJAS.jpg" height=120 width=120 alt="Pennsylvania Junior Academy of Science" id="pjas"></a>
+		<a href="https://www.piaa.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PIAA.png" style="padding-top: 18px;" alt="Pennsylvania Interscholastic Athletic Association"></a>
+		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/AATG.png" width=144.6 height=72 style="padding-top: 25px;" alt="American Association of Teachers of German"></a>
+		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Peap.jpg" alt="President's Award for Educational Excellence" id="peap"></a>
+		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PTA.jpg" style="padding-top: 14px;" alt="Lower Moreland PTA" id="pta"></a>
+		<a href="https://www.paseed.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/SEED.webp" height="120"></a>
 	</div>
+<button onclick="scrollup()" id="scroll" title="Go to top"><p>Go to top</p><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" height=15></button>
 <footer>
-<a href="https://shwin320.github.io"><p style="padding-left: 8px;">Ashwin's Website</p></a>
-<p style="margin-left: 10px; margin-right: 10px;">—</p>
-<a href="mailto:shwin320@gmail.com"><p>Email Ashwin</p></a>
-<p style="margin-left: 10px; margin-right: 10px;">—</p>
-<p>Copyright © 2019-2020 Ashwin Thomas. All Rights Reserved.</p>
-<button onclick="scrollup()" id="scroll" title="Go to top"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" width=40 height=40></button>
+<a href="https://shwin320.github.io" title="Home"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Home.svg" alt="Home" id="hbutton" height=24 style="margin-left:2px; padding-right: 8px;"></a>
+<a href="mailto:shwin320@gmail.com" title="Email Ashwin"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Email.svg" alt="Email Ashwin" id="ebutton" height=24></a>
+<p>Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 </footer>
-<script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Ashwin's%20Website.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@2b80595/Ashwin's Website.js"></script>
+<script>
+navh.addEventListener("mouseover", underhome);
+navh.addEventListener("mouseout", nunderhome);
+nava.addEventListener("mouseout", nunderabout);
+nava.addEventListener("mouseover", underabout);
+/*
+navach.addEventListener("mouseover", underachieve);
+navach.addEventListener("mouseout", nunderachieve);
+*/
+navw.addEventListener("mouseover", underwork);
+navw.addEventListener("mouseout", nunderwork);
+darkImgAch(dark);
+dark.addListener(darkImgAch);
+</script>
 </body>
 </html>
- 
