--- a/achievements.html
+++ b/achievements.html
@@ -46,10 +46,10 @@
 		</tr>
 	</table>
 	<ul id="navigation">
-		<li><a href="home.html" id="nhome" class="inact">Home</a></li>
-		<li><a href="about.html" id="nabout" class="inact">About Me</a></li>
-		<li><a href="achievements.html" id="nachieve">Achievements</a></li>
-		<li><a href="work.html" id="nwork" class="inact">My Work</a></li>
+		<li><a href="/" id="nhome" class="inact">Home</a></li>
+		<li><a href="/about" id="nabout" class="inact">About Me</a></li>
+		<li><a href="/achievements" id="nachieve">Achievements</a></li>
+		<li><a href="/work" id="nwork" class="inact">My Work</a></li>
 	</ul>
 	<div class="under" id="home"></div>
 	<div class="under" id="about"></div>
