--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<table id="heading">
 		<tr>
 			<td>
-				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png">
+				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png" alt="Ashwin Thomas">
 			</td>
 			<td>
 				<h1 id="headtext">Ashwin Thomas</h1>
