--- a/achievements.html
+++ b/achievements.html
@@ -38,7 +38,7 @@
 	<table id="heading">
 		<tr>
 			<td >
-				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png" height="75">
+				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png" height="75" alt="Ashwin Thomas">
 			</td>
 			<td>
 				<h1 id="headtext">Ashwin Thomas</h1>
@@ -149,7 +149,7 @@
 		<a href="https://www.aatg.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/AATG.png" width=144.6 height=72 style="padding-top: 25px;" alt="American Association of Teachers of German"></a>
 		<a href="http://www2.ed.gov/programs/presedaward/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Peap.jpg" alt="President's Award for Educational Excellence" id="peap"></a>
 		<a href="https://www.lmtsd.org/Page/230" target="_blank" id="bottom"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/PTA.jpg" style="padding-top: 14px;" alt="Lower Moreland PTA" id="pta"></a>
-		<a href="https://www.paseed.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/SEED.webp" height="120"></a>
+		<a href="https://www.paseed.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/SEED.webp" height="120" alt="PA SEED"></a>
 	</div>
 <button onclick="scrollup()" id="scroll" title="Go to top"><p>Go to top</p><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/arrow.png" height=15></button>
 <footer>
