--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
 	<table id="heading">
 		<tr>
 			<td >
-				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png" height="75">
+				<img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@146e2c4/Logo.png" height="75" alt="Ashwin Thomas">
 			</td>
 			<td>
 				<h1 id="headtext">Ashwin Thomas</h1>
@@ -59,20 +59,20 @@
 <div id="top" class="work">
 <table>
 	<tr>
-		<td><a href="https://sites.google.com/lmtsd.org/at-eportfolio" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Ashwin's ePortfolio.jpg" id="eport"></a></td>
+		<td><a href="https://sites.google.com/lmtsd.org/at-eportfolio" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website@d4548ff/Ashwin's ePortfolio.jpg" id="eport" alt="Ashwin's ePortfolio"></a></td>
 		<td><h3>Ashwin's ePortfolio</h3><p>This is my student ePortfolio. This site includes some of my school work. There are also links to other websites here that include work in specific areas.</p></td>
 	</tr>
 	<tr>
-		<td><a href="https://x.thunkable.com/copy/edc2055ed59bd11307ca88fad54c83c4" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/bus.png" width=250 height=187.5></a>
+		<td><a href="https://x.thunkable.com/copy/edc2055ed59bd11307ca88fad54c83c4" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/bus.png" width=250 height=187.5 alt="Late Bus"></a>
 		<td><h3>Late Bus</h3><p>Don't no which late bus you're on? Not a problem anymore with Late Bus. Just press the "Enter Address" button when you're home, and the address will be saved in the app for future use. Use the map to look up which late bus you take. Map not clear enough? No problem! Just search the official late bus list to see which late bus you take in your area. Never be clueless with what late bus you take again, with Late Bus. (Installation instructions <a href="https://docs.thunkable.com/thunkable-cross-platform/download" target="_blank">here</a>; intended for use only within Murray Avenue School)
 </p></td>
 	</tr>
 	<tr>
-		<td><a href="https://shwin320.github.io/OneLocker" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/OneLocker.png"></a></td>
+		<td><a href="https://shwin320.github.io/OneLocker" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/OneLocker.png" alt="OneLocker"></a></td>
 		<td><h3>OneLocker</h3><p>OneLocker is your life, organized. The websites you need for school everyday are put together into one website. All of the sites are organized into different categories, that you can navigate through a table of contents. No longer do you need to bookmark dozens of websites, thanks to OneLocker. (Login: Username-public, Password-lmtsd; login is case-sensitive)</p></td>
 	</tr>
 	<tr>
-		<td style="padding-top: 10px;"><a href="https://www.khanacademy.org/computer-programming/pallet/4658925841743872" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Pallet.png"></a></td>
+		<td style="padding-top: 10px;"><a href="https://www.khanacademy.org/computer-programming/pallet/4658925841743872" target="_blank"><img src="https://cdn.jsdelivr.net/gh/shwin320/Ashwin-Website/Pallet.png"  alt="Pallet"></a></td>
 		<td><h3>Pallet</h3><p>Pallet is a drawing pad based on the JavaScript coding language. You can use Pallet to draw and doodle. You can change the background color and draw with 19 color options and 4 brush shapes. It's also easy to remix the code to create new functions and expand Pallet's abilities. All the controls are from the keyboard; the only thing you need your mouse for is to draw with. </p></td>
 	</tr>
 	<tr>
