--- a/OneLocker.html
+++ b/OneLocker.html
@@ -5,13 +5,13 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@29c049a/OneLocker.css">
 </head>
 <body id="body">
-<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@d76fc63/OneLocker.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@fd5e31e/OneLocker.js"></script>
 <p>Don't have an account, yet? <a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank" class="link">Sign-up today!</a></p>
 <p style="margin-top: -15px">Questions? Raise your hand and ask <a href="mailto:shwin320@gmail.com" target="_blank" class="link">Ashwin Thomas</a>, OneLocker developer.</p>
 <br><br>
 <h1>OneLocker</h1>
 <h2>Your life, organized</h2>
-<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker/OneLocker.png" id="nonhover">
+<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker/OneLocker.png" id="nonhover" alt="OneLocker">
 <br><br><br>
 <div style="text-align:center;">
 <form action="javascript:;" onsubmit="login_protocol()">
