--- a/reading_mode.html
+++ b/reading_mode.html
@@ -1,5 +1,14 @@
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-66265239-4"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'UA-66265239-4');
+		</script>
 		<title>Convert to Reader Mode</title>
 		<link rel="icon" href="https://cdn.jsdelivr.net/gh/shwin320/reading-mode@93e299f/logo.ico">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/shwin320/reading-mode@93e299f/reading-mode.css">
