Update and rename Login.html to login.html

--- a/OneLocker/login.html
+++ b/OneLocker/login.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="home.html">
+			<a href="/">
 				<table>
 					<tbody>
 						<tr>
@@ -48,7 +48,6 @@
 			<p style="position: absolute; top: 0px; left: 8px; margin: 0px;">Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 			<nav style="position: absolute; top: 0px; right: 8px;">
 				<a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank">Sign-up</a>
-				<a href="" target="_blank">Login</a>
 				<a href="mailto:shwin320@gmail.com?subject=OneLocker Help Request" target="_blank">Get Help</a>
 			</nav>
 		</footer>
