--- a/OneLocker/index.html
+++ b/OneLocker/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="/">
+			<a href="/OneLocker/login">
 				<table>
 					<tbody>
 						<tr>
@@ -36,7 +36,7 @@
 						<p>OneLocker is your life, organized. All your websites are organized into easy-to-navigate categories. No need to bookmark dozens of links, since OneLocker organizes them all into one area. Perfect for organizing your online materials for home, school, or work.</p>
 						<nav>
 							<a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_self">Sign-up</a>
-							<a href="/login">Login</a>
+							<a href="/OneLocker/login">Login</a>
 						</nav>						
 					</td>
 				</tr>
