--- a/OneLocker/index.html
+++ b/OneLocker/index.html
@@ -46,7 +46,7 @@
 			<p style="position: absolute; top: 0px; left: 8px; margin: 0px;">Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 			<nav style="position: absolute; top: 0px; right: 8px;">
 				<a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank">Sign-up</a>
-				<a href="/login">Login</a>
+				<a href="/OneLocker/login">Login</a>
 				<a href="mailto:shwin320@gmail.com?subject=OneLocker Help Request" target="_blank">Get Help</a>
 			</nav>
 		</footer>
@@ -54,7 +54,7 @@
 		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@54b5c5a/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") == "shwin17MAGD" || localStorage.getItem("user") == "demo" || localStorage.getItem("user") == "lmtsd"){
-				window.location.replace("page1.html");
+				window.location.replace("/OneLocker/page1");
 			}
 			var isDark = window.matchMedia("(prefers-color-scheme: dark)");
 			darkImg(isDark);
